src/objects/wbsendit__Smart_Email__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Create_Tasks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Description__c</fullName>
        <label>Description</label>
        <length>16000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Filter_Logic__c</fullName>
        <label>Filter Logic</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Filters__c</fullName>
        <label>Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Root_Object__c</fullName>
        <label>Root Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email__c</fullName>
        <label>Smart Email</label>
        <referenceTo>wbsendit__Smart_Email_Template__c</referenceTo>
        <relationshipLabel>Smart Email Mappings</relationshipLabel>
        <relationshipName>Smart_Email_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Smart Email Mapping</label>
    <nameField>
        <label>Smart Email Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smart Email Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>